# fastapi-tailwind--template

./: .air.toml  .gitignore  README.md  mise.toml  package-lock.json  package.json  pyproject.toml  vite.config.mjs
app/: main.py
app/css/: main.css
app/css/themes/: chat.css  gpt.css  greeny.css
app/js/: main.js
app/templates/: index.html  layout.html  sidebar.html  user-list.html
app/templates/examples/: fasthx-templating.html
