[project]
name = "python-htmx-daisyui"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[cli,standard]>=0.115.12",
    "fastapi-htmx>=0.5.0",
    "fasthx>=2.3.3",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.0",
]



[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*"]
exclude = ["py_env", "node_modules"]
